fix: resolve search alignment

--- a/blocks/browse/da-browse/da-browse.css
+++ b/blocks/browse/da-browse/da-browse.css
@@ -164,3 +164,7 @@
   display: none;
 }
 
+.da-list-header-action:has(da-search) {
+  min-width: 0;
+  width: 100%;
+}
